Fixed language errors in International coins.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -210,7 +210,7 @@ For sample b1-1, the Fe ratio is a little above 4, so we can say that the fit wa
 Alloy composition is usually presented by mass in practical applications.These results are in the last column of Table \ref{tab:unlabelled-alloys}.
 
 \subsection{International coins}
-The lab has a box of various coins from around the world, the content of which we can again interpret using our fluorescence method, similar to the analysis in Section \ref{subsubsec:unlabelled-alloys}.
+We analysed various coins from around the world, the content of which we can again interpret using our fluorescence method, similar to the analysis in Section \ref{subsubsec:unlabelled-alloys}.
 
 \begin{table}[!htbp]
     \centering
@@ -247,20 +247,20 @@ The lab has a box of various coins from around the world, the content of which w
     \label{tab:coin-measured}
 \end{table}
 
-When looking at plots of the spectra, we see that almost all coins are made predominantly out of Ni, Cu, and Zn with $Z=\numrange{28}{30}$ respectively. The spectra are overlapping, so similarly to the b1-2,3 samples in Section \ref{subsubsec:unlabelled-alloys}, we cannot really fit the samples well for all $\alpha, \beta$ lines. Nevertheless, we can still determine if one of the three elements is present. Additionally, we note down any additional features of the spectra that are of interest.The results can be summarised in Table \ref{tab:coin-measured}. Two exceptions to the general rule are obvious - the 1 Yen and 25c canadian coins. We can compare our results with the information from the institutions that issue these coins.
+The results are summarised in Table \ref{tab:coin-measured}. When looking at plots of the spectra, we see that almost all coins are made predominantly out of Ni, Cu, and Zn with $Z=\numrange{28}{30}$ respectively. The spectra are overlapping, so similarly to the b1-2,3 samples in Section \ref{subsubsec:unlabelled-alloys}, we cannot really fit the samples well for all $\alpha, \beta$ lines. Nevertheless, we can still determine if one of the three elements is present. Additionally, we note down any additional features of the spectra that are of interest. Two exceptions to the general rule are obvious - the 1 Yen and 25c canadian coins. We can compare our results with the information from the institutions that issue these coins.
 
-The official information lists the 1 Yen coin to be maid of 100\% aluminium (\reminder{citation needed}). The \Kalpha line for aluminum is at \qty{1.49}{keV}, out of the range of our setup. This is the reason we do not see any signal in our spectrum.
+The official information lists the 1 Yen coin to be made of 100\% aluminium (\reminder{citation needed}). The \Kalpha line for aluminum is at \qty{1.49}{keV}, out of the range of our setup. This is the reason we do not see any signal in our spectrum.
 
-The official information informs us that the 25c canadian coin is a 94\% steel core with 6\% Ni-Cu plating (\reminder{citation needed}). When we look at the spectrum, however, the strength of the Fe line is much less than the Ni and Cu. This is due to the fact that the X-rays do not penetrate deep into the coin. If a thick enough coating is applied, we could even fully shield the steel core. In fact, several coins on our list follow this pattern, e.g. the new 2p and 10p coins.
+The official information informs us that the 25c canadian coin is a 94\% steel core with 6\% Ni-Cu plating (\reminder{citation needed}). When we look at the spectrum, however, the strength of the Fe line is much less than the Ni and Cu. This is due to the fact that the X-rays do not penetrate deeply into the coin. If a thick enough coating is applied, we could even fully shield the steel core. In fact, several coins on our list follow this pattern, e.g. the new 2p and 10p coins.
 
-\subsubsection{Why Ni,Cu,Zn?}
-One obvious question that comes up form these results is why are alloys of Ni, Cu, and Zn the choice? There are several properties of these alloys that make them preferable for coin minting.
+\subsubsection{Why Ni, Cu, Zn?}
+One obvious question that comes up from these results is why are alloys of Ni, Cu, and Zn the choice? There are several properties of these alloys that make them preferable for coin minting.
 
 Historically, coins were most often made from gold, silver, and copper, with their value determined by the value of the metal in the coin. With the inflation of prices, however, the metal in the coins gradually became more expensive than their monetary value. There was a need for new materials to be implemented while keeping many of the familiar and useful properties of old coins.
 
 Firstly, there are visual consideration of the coins. Ni-Cu and Cu-Zn alloys can have varying colours depending on the ratio of elements used. Ni-Cu are usually silver in appearance, while Cu-Zn alloys are usually golden in appearance, with small amounts of other additives sometimes present, like in the case of the \emph{nordic gold} alloy used for the make of the 50 euro cent coin.
 
-Secondly, the cost considerations required some inexpensive materials to be used so that mass production is practical and coins are not produced at a loss. Due to inflation, this has also led to the change of coin composition throughout the years. One example is the UK 10p coin. While the old coin was made from pure Ni25Cu75, the new coin is made from 94\% steel clad in 6\% Ni. The method of implementing a cheaper core while using Ni,Cu,Zn for an outer layer also keeps the appearance the same or similar, which is one of the reasons for the approach.
+Secondly, the cost considerations required some inexpensive materials to be used so that mass production is practical and coins are not produced at a loss. Due to inflation, this has also led to the change of coin composition throughout the years. One example is the UK 10p coin. While the old coin was made from pure Ni25Cu75, the new coin is made from 94\% steel clad in 6\% Ni. The method of implementing a cheaper core while using Ni, Cu, Zn for an outer layer also keeps the appearance the same or similar, which is one of the reasons for the approach.
 
 Thirdly, the minting of the coins includes making the alloys and producing the coins with intricate detailing on their surfaces. The alloying of the specific ratios required by the specifications can be a difficult task outside of the specialised large scale industrial complexes. The three metals also allow for the detailing on different designs --- their alloys have been used to produce detailing by artisans for centuries (millennia?). Both of these specifics make the production of good counterfeit coins more difficult, which brings more security to the currency.
 
