Substituted mention of non-MP for the new Appendix.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -21,7 +21,7 @@
 \end{abstract}
 
 \section{Introduction}
-X-rays are an important experimental tool and have been for more than a 100 years, ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for various medical purposes and security scanners. In this experiment, we first study the theoretical basis of X-ray production, first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission line series of several samples of known elements with known atomic number, $Z$, to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment \reminder{--- remove this and fix non-MP part}. Then we report on the composition of several unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
+X-rays are an important experimental tool and have been for more than a 100 years, ever since their discovery by Wilhelm R\"{o}ntgen. They are currently employed by both scientists, from scattering experiments in condensed matter to high-energy astrophysics, and citizens for various medical purposes and security scanners. In this experiment, we first study the theoretical basis of X-ray production, first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission line series of several samples of known elements with known atomic number, $Z$, to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples which was previously obtained using diffraction (see \ref{sec:diffraction-experiment}). Then we report on the composition of several unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
 
 \section{Theory}
 We begin by introducing some of the background theory behind X-rays and their production.
@@ -86,7 +86,7 @@ where $n_\mathrm{a}$ and $n_\mathrm{b}$ are the number densities of materials a 
 \end{equation}
 
 \section{Experiment}\label{sec:experiment}
-Our experiment consists of the setup presented in Figure \ref{fig:experim-setup}. First, we have an X-ray source with a Mo (molybdenum) anode, which produces some characteristic \Kalpha X-rays that can be used for diffraction experiments (see the first part of \cite{OxfPhys2010} \reminder{fix this plox}) and some continuous bremsstrahlung (see Section \ref{subsec:x-ray-production} for more details). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit mostly in the characteristic X-rays of K, L, and M series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are: tube voltage $V = \qty{35}{kV}$, emission current \qty{1}{A}, exposure time $t=\qty{100}{s}$. This, according to Equations \eqref{eqn:bremss-energy-max} and \eqref{eqn:Kalpha-energy-out}, allows us to produce, for example, \Kalpha X-rays with energy up to \qty{26.25}{keV} from samples with atomic numbers up to at least $50$, ignoring the contribution from $b$.
+Our experiment consists of the setup presented in Figure \ref{fig:experim-setup}. First, we have an X-ray source with a Mo (molybdenum) anode, which produces some characteristic \Kalpha X-rays that can be used for diffraction experiments (more details in \cite{OxfPhys2010}; key results are presented in \ref{sec:diffraction-experiment}) and some continuous bremsstrahlung (see Section \ref{subsec:x-ray-production} for more details). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit mostly in the characteristic X-rays of K, L, and M series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are: tube voltage $V = \qty{35}{kV}$, emission current \qty{1}{A}, exposure time $t=\qty{100}{s}$. This, according to Equations \eqref{eqn:bremss-energy-max} and \eqref{eqn:Kalpha-energy-out}, allows us to produce, for example, \Kalpha X-rays with energy up to \qty{26.25}{keV} from samples with atomic numbers up to at least $50$, ignoring the contribution from $b$.
 
 \begin{figure}[!htbp]
     \centering
@@ -141,7 +141,7 @@ Agreement is not so good, but we have not taken into account many other effects 
 We continue with the spectroscopic analysis of two semiconductor samples and several unlabelled samples.
 
 \subsubsection{Semiconductors}
-We have previously determined the composition of the semiconductor samples by measuring the lattice constant \reminder{cite non-mp}. Here, we will provide an independent confirmation of these results, as well as measure the relative composition.
+We have previously determined the composition of the semiconductor samples by measuring the lattice constant (see \ref{sec:diffraction-experiment}). Here, we will provide an independent confirmation of these results, as well as measure the relative composition.
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{img/spect-semiconductors.pdf}
@@ -151,7 +151,7 @@ We have previously determined the composition of the semiconductor samples by me
 
 The spectra of semiconductor samples X2 and Y2 are presented in Figure \ref{fig:spect-semiconductors}. First, both spectra show a strong \Kalpha line of In, a group III element. There is also a weak signal at the \Kalpha for Mo, which is just the signature of the anode in the X-ray source, so we can ignore it.
 
-Semiconductor Y2 also shows traces of Sb, a group III and V elements respectively. This is a very common structure for semiconductors, so this is reassuring (\reminder{expand? - moreso say "this is a well-known semiconductor etc"}). In addition, this confirms our result from the first part of the practical \reminder{ref}. We can measure intensities of the \Kalpha lines for both, and calculate the ratios:
+Semiconductor Y2 also shows traces of Sb, a group III and V elements respectively. This is a very common structure for semiconductors, so this is reassuring (\reminder{expand? - moreso say "this is a well-known semiconductor etc"}). In addition, this confirms our result from \ref{sec:diffraction-experiment}. We can measure intensities of the \Kalpha lines for both, and calculate the ratios:
 \begin{equation}
     \frac{n_\mathrm{In}}{n_\mathrm{Sb}} = \frac{I_\mathrm{In}}{I_\mathrm{Sb}} = \frac{122.5}{42.8} \approx 2.86 \quad \Rightarrow \quad p_\mathrm{In} = \frac{n_\mathrm{In}}{n_\mathrm{In}+n_\mathrm{Sb}} = 74 \% \quad p_\mathrm{Sb} = 26 \%
 \end{equation}
@@ -162,7 +162,7 @@ We also have to note other two features:
 \end{itemize}
 These \reminder{finish}.
 
-For sample X2, we see a trace of In only. Checking with our result from the diffraction analysis \reminder{sub in with ref}, we see that the dopant is P (phosphorus). The characteristic X-rays of P in K-series (the most energetic ones) have energies around \qty{2}{keV}, which is around our detection limit of about \qtyrange{2}{4}{keV}. This highlights one of the shortcomings of our method: it is limited in detecting only those elements, which have X-ray emission lines in the range of the bremsstrahlung and the range of operation of the detector.
+For sample X2, we see a trace of In only. Checking with our result from the diffraction analysis from \ref{sec:diffraction-experiment}, we see that the dopant is P (phosphorus). The characteristic X-rays of P in K-series (the most energetic ones) have energies around \qty{2}{keV}, which is around our detection limit of about \qtyrange{2}{4}{keV}. This highlights one of the shortcomings of our method: it is limited in detecting only those elements, which have X-ray emission lines in the range of the bremsstrahlung and the range of operation of the detector.
 
 \subsubsection{Unlabelled alloys}\label{subsubsec:unlabelled-alloys}
 The lab has two boxes of unlabelled metallic samples - alloys of different metals. We can determine their composition and ratios by using Section \ref{subsec:compos-analysis}. Result is presented in Table \ref{tab:unlabelled-alloys}.
@@ -278,7 +278,7 @@ Finally, these alloys are very practical for everyday use. Coins, in their daily
 \reminder{This is a potential direction to investigate. Main idea --- calculate the ``value'' of a coin via its weight+official composition to see if anything interesting appears (coins worth more than their value, similar value for all coins etc.)}
 
 \section{Conclusions}
-In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z=\numrange{22}{40}$ and $\numrange{50}{82}$, respectively. We find that there exists a linear relationship between the square root of the energy and number $Z$ as predicted by Moseley's law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples by measuring their emission spectra when exposed to the continuous X-ray source. For the semiconductors, we observe traces of In in sample X2 and traces of In and Sb, which confirms the independently derived results form the non-mini-project \reminder{non-mini proj}. We also note the observational limitations of our setup, since the dopant of X2 was not observed --- P has a \Kalpha of energy below the observational limit.
+In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z=\numrange{22}{40}$ and $\numrange{50}{82}$, respectively. We find that there exists a linear relationship between the square root of the energy and number $Z$ as predicted by Moseley's law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples by measuring their emission spectra when exposed to the continuous X-ray source. For the semiconductors, we observe traces of In in sample X2 and traces of In and Sb in sample Y2, which confirms the independently derived results form diffraction (see \ref{sec:diffraction-experiment}). We also note the observational limitations of our setup, since the dopant of X2 was not observed --- P has a \Kalpha of energy below the observational limit.
 
 Then, we study various metal alloys of unknown composition and the relative mass ratios of these samples. We measure these by performing Gaussian fits using the built-in capabilities of the acquisition software \reminder{fix}. We also go through some analysis to confirm our observations are self-consistent by comparing the ratios of \Kalpha to \Kbeta for the same elements in different samples.
 
